# eth-oxford-26

./: .gitignore  ARCHITECTURE.md  CONSOLIDATION_REPORT.md  DEMO_GUIDE.sh  PRE_DEMO_CHECKLIST.sh  README.md  STATUS.md  config.json  demo_run.sh  sui.tgz
.github/workflows/: backend-ci.yml
backend/: .env.example  .flake8  README.md  _test_all.py  agent_executor.ts  agents.py  api.py  attack_demo.py  checks.sh  deploy.sh  error_map.ts  event_provider.ts  gas_station.ts  integrate.py  kill_switch_test.ts  market_data.py  optimize_and_send.py  package-lock.json  package.json  ptb_builder.ts  pyproject.toml  quantum_rng.py  qubo_optimizer.py  quickstart.sh  relayer.py  relayer_server.ts  requirements-dev.txt  requirements.txt  safety_redline_test.ts  sui_client.py  test_qubo.py  tsconfig.json
backend/agents/: __init__.py  manager.py
backend/blockchain/: __init__.py  agent_executor.py  client.py  event_provider.py  gas_station.py  ptb_builder.py  relayer.py  relayer_server.py
backend/core/: __init__.py  error_map.py  garch.py  liquidity.py  market_data.py  slippage.py
backend/quantum/: __init__.py  benchmark_vs_classical.py  optimize_and_send.py  optimizer.py  rng.py
backend/sui_contract/: Move.toml
backend/sui_contract/sources/: agent_registry.move  ai_task.move  audit_trail.move  oracle.move  portfolio.move
backend/sui_contract/tests/: portfolio_tests.move
backend/tests/: __init__.py  backtester.py  benchmark_optimizer.py  integration_tests.py  safety_tests.py  test_error_map.py  test_qubo.py  test_scalability.py  test_slippage.py
docs/: agents.md
frontend/: .env.example  DEMO_SIGNIN.md  constants.ts  next.config.ts  package-lock.json  package.json  tmp_ai_test.js
frontend/app/: DAppKitClientProvider.tsx  globals.css  layout.tsx  page.js
frontend/app/api/debug/: route.js
frontend/app/api/verify/: route.js
frontend/app/faq/: page.js
frontend/components/: AIAgents.js  AgentReasoning.js  BenchmarkComparison.js  Dashboard.js  JohannChat.js  MarketAgentConsole.js  QuantumAuditLog.js  QuantumRNG.js  SimulationResults.js
frontend/frontend/: package-lock.json  package.json
frontend/frontend/app/: dapp-kit.ts  globals.css  layout.tsx  page.js  page.tsx
frontend/frontend/app/api/debug/: route.js
frontend/frontend/app/api/verify/: route.js
frontend/frontend/app/faq/: page.js
frontend/frontend/components/: AIAgents.js  Dashboard.js  JohannChat.js  MarketAgentConsole.js  Portfolio.js  QuantumRNG.js  SuiEscrow.js  WalletConnector.js
frontend/frontend/scripts/: send_ai.sh
frontend/pages/: index.js
frontend/scripts/: send_ai.sh
frontend/tools/: simulate_agent_repetition.js
frontend/utils/: config.js
